tests/lang/s01_basics/s06_data_types/t6_enumeration_fail1_ordering.nim
discard """
description: "enumeration int values must be assigned in ascending order."
errormsg: "invalid order in enum 'b'"
line: 11
column: 9
"""

type
  Abc = enum
    a = 7,
    b = 2,
    c = 1
